clusters/my-cluster/Services/sleeq-api-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sleeq-api
  name: sleeq-api-service
spec:
  type: ClusterIP
  selector:
    app: sleeq-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8081
