clusters/my-cluster/Services/sleeq-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sleeq-api-ingress
  namespace: default
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: "/api"
        pathType: Prefix
        backend:
          service:
            name: sleeq-api-service
            port:
              number: 80
      - path: "/db"
        pathType: Prefix
        backend:
          service:
            name: sleeq-mongo-service
            port:
              number: 27017
